--- a/semester1.tex
+++ b/semester1.tex
@@ -23,13 +23,12 @@
 
 \part{Vectoren}
 
-% \activitychapter{6dejaar/vectoren/vct_inleiding.tex}
-\activitychapter{6dejaar/vectoren/vct_notatie.tex}
-
 \activitychapter{6dejaar/vectoren/vct_begrip.tex}
 \activitychapter{6dejaar/vectoren/vct_notatie.tex}
 \activitychapter{6dejaar/vectoren/vct_bewerkingen.tex}
-\activitychapter{6dejaar/vectoren/vct_oef.tex}
+\activitysection{6dejaar/vectoren/vct_oef_reeks1.tex}
+\activitysection{6dejaar/vectoren/vct_oef_reeks2.tex}
+\activitysection{6dejaar/vectoren/vct_oef_reeks3.tex}
 
 
 
@@ -59,7 +58,7 @@
 
 \activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
 \activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
-\activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex}
+% \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex} %keuze gemaakt alles naar basisbegrippen 
 \activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
 \activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
 
