remove \begin{figure}; remove lonely \item

--- a/6dejaar/dynamica/exercises/vragen_2Dnoimport.tex
+++ b/6dejaar/dynamica/exercises/vragen_2Dnoimport.tex
@@ -121,13 +121,13 @@ wand treffen:
 \item in het punt (3);
 \item in het punt (4).
 \end{enumerate}
-\begin{figure}[h]
+%%\begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.8\textwidth]{afgeschotenpijl.jpg}
 \end{center}
-\end{figure}
+%%\end{figure}
 \begin{oplossing}
-\item[\textit{oplossing}]We gebruiken de baanvergelijking van de
+We gebruiken de baanvergelijking van de
 horizontale worp. Voor eenzelfde horizontale afstand $x$ moeten we
 immers een nieuwe verticale afstand $y$ vinden, in functie van een
 andere beginsneleheid. Als het accent ' staat voor de nieuwe
@@ -145,8 +145,9 @@ De pijl zal dus in punt (3) terechtkomen.
 
 \begin{exercise} Een puntmassa beschrijft een cirkel met een straal van $5,0\rm\,cm$ en een periode van $0,33\rm\,s$. Welke afstand op de cirkel legt deze puntmassa in $7,0\rm\,s$ af?
 \begin{oplossing}
-\item[\textit{gevraagd}]$s$ (booglengte)
-\item[\textit{oplossing}]Omdat de grootte van de snelheid constant is, is de
+\textit{gevraagd}  $s$ (booglengte)
+
+\textit{oplossing} Omdat de grootte van de snelheid constant is, is de
 afgelegde weg over de boog gelijk aan de snelheid vermenigvuldigd met de tijd:
 \begin{eqnarray*}
 s&=&vt\\
@@ -170,7 +171,7 @@ snelheid van een punt van het aardoppervlak:
 \item op $51^\circ$ noorderbreedte.
 \end{enumerate}
 \begin{oplossing}
-\item[\textit{Oplossing}]De hoeksnelheid kunnen we berekenen met de periode van de omwenteling van de aarde, nl. 24 uur, t.t.z. $86400\rm\,s$. Dat geeft
+De hoeksnelheid kunnen we berekenen met de periode van de omwenteling van de aarde, nl. 24 uur, t.t.z. $86400\rm\,s$. Dat geeft
 \begin{eqnarray*}
 \omega=\frac{2\pi}{T}=\frac{2\pi}{86400\rm\,s}=7,3\cdot10^{-5}\rm\,rad\,s^{-1}
 \end{eqnarray*}
@@ -182,11 +183,11 @@ Dit is nogal snel, het is namelijk $1667\rm\,km/h$.
 % \newline
 
 Op $51^\circ$ noorderbreedte\footnote{Onze school ligt op $50^\circ 52'36,69"$ noorderbreedte.} maken we ook een cirkelbeweging maar nu met een andere straal. De straal is nu de afstand van het punt op het aardoppervlak tot aan de rotatieas van de aarde, zie figuur. 
-\begin{figure}[h]
+%%\begin{figure}[h]
 \centering
 \includegraphics[width=0.4\textwidth]{aardehoeksnelheid2}
-\end{figure}
-%\begin{figure}[H]
+%%\end{figure}
+%%%\begin{figure}[H]
 %\begin{picture}(320,160)(0,0)
 %\put(115,0){\includegraphics[scale=1.0]{aardehoeksnelheid}}
 %\put(210,82){$\alpha$}
@@ -198,7 +199,7 @@ Op $51^\circ$ noorderbreedte\footnote{Onze school ligt op $50^\circ 52'36,69"$ n
 %%\put(390,0){br}
 %%\put(390,160){.}
 %\end{picture}
-%\end{figure}
+%%%\end{figure}
 Met elementaire driehoeksmeetkunde vind je deze straal terug als $r'=r\cos\alpha$. De snelheid vinden we vervolgens op dezelfde manier.
 \begin{eqnarray*}
 v=r'\omega=\frac{2\pi r\cos\alpha}{T}=291\rm\,m/s
@@ -240,7 +241,7 @@ $v_b$. Dan is
 \raisebox{-5cm}{\includegraphics[width=\textwidth]{ringpunten}}
 \end{minipage}
 \begin{oplossing}
-\item[\textit{oplossing}]De hoeksnelheid is voor beide punten gelijk
+De hoeksnelheid is voor beide punten gelijk
 zodat:
 \begin{eqnarray*}
 \omega_a&=&\omega_b\\
@@ -272,7 +273,7 @@ kamwiel bestaat de volgende relatie:
 \raisebox{-3.5cm}{\includegraphics[width=\textwidth]{kamwielenfiets}}
 \end{minipage}
 \begin{oplossing}
-\item[\textit{oplossing}]Aangezien een stukje van de ketting overal
+Aangezien een stukje van de ketting overal
 dezelfde snelheid heeft -- het legt in een bepaalde tijd steeds
 evenveel afstand af -- moet de snelheid van een punt op de
 buitenrand van het grootste wiel gelijk zijn aan de snelheid van een
@@ -308,9 +309,11 @@ v_0&=&x\sqrt{\frac{g}{2y}}=21,37\rm\,m/s=77\rm\,km/h
 \item Hoeveel tijd hebben de pakketten nodig om het doel te bereiken?
 \end{enumerate}
 \begin{oplossing}
-\item[\textit{gegeven}]$v_0=125\rm\,m/s$\newline$y=920\rm\,m$
-\item[\textit{gevraagd}]$x$, $t$
-\item[\textit{oplossing}]De afstand waarover de voedselpakketten in
+\textit{gegeven}  $v_0=125\rm\,m/s$\newline$y=920\rm\,m$
+
+\textit{gevraagd} $x$, $t$
+
+\textit{oplossing} De afstand waarover de voedselpakketten in
 horizontale richting zijn vooruit gegaan, kunnen we vinden met de
 baanvergelijking. We weten namelijk hoever de pakketten naar beneden
 zijn gevallen en wat hun beginsnelheid is:
@@ -454,14 +457,14 @@ $\vec{v}_0$ die een hoek $\varphi$ maakt met de horizontale
 In de veronderstelling dat de luchtweerstand verwaarloosbaar is, dan
 ziet het verloop van de horizontale snelheidscomponente $v_x$ als
 functie van de tijd er als volgt uit:
-\begin{figure}[h]
+%%\begin{figure}[h]
 \begin{flushright}
 \includegraphics[width=0.22\textwidth, angle=0]{horiz_snelheidscomp_a}
 \includegraphics[width=0.22\textwidth, angle=0]{horiz_snelheidscomp_b}
 \includegraphics[width=0.22\textwidth, angle=0]{horiz_snelheidscomp_c}
 \includegraphics[width=0.22\textwidth, angle=0]{horiz_snelheidscomp_d}
 \end{flushright}
-\end{figure}
+%%\end{figure}
 
 \end{exercise}
 
@@ -469,11 +472,11 @@ functie van de tijd er als volgt uit:
 een kogel die op het ogenblik \mbox{$t=0$~s} afgeschoten wordt
 vanuit de oorsprong. De aangeduide punten geven om de \mbox{100 ms}
 de plaats van de kogel aan.
-\begin{figure}[h]
+%%\begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.7\textwidth]{horiz_snelheidscomp}
 \end{center}
-\end{figure}
+%%\end{figure}
 
 
 De horizontale snelheidscomponent van de kogel is gelijk aan?
@@ -492,11 +495,11 @@ en glijdt langs het beijzeld dak naar beneden. Hij vertrekt vanuit
 rust op de top van het dak dat $8,2~\rm m$ lang is met een
 versnelling van $5,0~\rm m/s^2$. De rand van het dak bevindt zich
 $3,0~\rm m$ boven de grond die met een pak sneeuw bedekt is.
-\begin{figure}[h]
+%%\begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.55\textwidth]{kerstman}
 \end{center}
-\end{figure}
+%%\end{figure}
 \begin{enumerate}
 \item Hoe groot is de snelheid van de kerstman waarmee hij van het
 dak vliegt?
