--- a/6dejaar/vectoren/vct_begrip.tex
+++ b/6dejaar/vectoren/vct_begrip.tex
@@ -31,9 +31,7 @@ De plaats waar de vector aangrijpt, noemt men het aangrijpingspunt van de vector
 
 \begin{remark}
 Het onderscheidt tussen scalar en vector is in de eerste plaats een verschil in \textit{naamgeving}.
-Een scalar kan immers bekeken worden als een vector met slechts één component.
-
-Zo kan men zeggen dat de temperatuur in graden gelijk is aan de scalar '\(27\)' of gegeven wordt door de vector \(\vec{t} = (27) \) met slechts één component. 
+Zo kan men zeggen dat de temperatuur in graden gelijk is aan de scalar \(27\) of gegeven wordt door de vector \(\vec{temp} = (27) \) met slechts één component. 
 \end{remark}
 
 
