fix size (terrible hack...)

--- a/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
@@ -23,21 +23,30 @@ Hieronder een voorbeeld van een voetbalveld waarop de positie \(\vec{r}\) van de
 Voor een toeschouwer in het publiek staan beide referentiestelsels stil, bijgevolg is de snelheid \(\vec{v}\) voor beiden dezelfde.
 
 
-% \begin{image}
-% 	% \includegraphics[width=0.3\textwidth]{referentiestelsels}
-% % Uit ppt Vincent, IK WIL AFBEELDING GROTER MAAR LUKT ME NIET.
-% \end{image}
+\begin{center}
+\begin{minipage}[t]{0.70\textwidth}
+\begin{image}[\linewidth]
+	\includegraphics{referentiestelsels}
+% Uit ppt Vincent, IK WIL AFBEELDING GROTER MAAR LUKT ME NIET.
+\end{image}
+\end{minipage}
+\end{center}
 
 \begin{exercise}
 De kolibri in onderstaande foto blijft ter plekke in de lucht hangen onder de bloem. Geef twee referentiestelsels waarin deze vogel \textbf{niet} stilstaat. 
 
-\begin{image}
-	\includegraphics[0.4\textwidth]{kolibri}
+\begin{center}
+\begin{minipage}[t]{0.30\textwidth}
+\begin{image}[\linewidth]
+	\includegraphics{kolibri}
 % Bron: https://unsplash.com/photos/green-and-black-humming-bird-flying-p-DDK9lOmmE 
 % AFBEELDING KLEINER? LUKT ME NIET
 \end{image}
+\end{minipage}
+\end{center}
 
-\begin{oplossing}
+
+\begin{oplossing}\nl
 \begin{itemize}
 \item Een referentiestelsel met de kern van de aarde als oorsprong. (De kolibri draait nu rond de as van de aarde...)
 \item Een referentiestelsel met de zon als middelpunt (De kolibri draait nu ook rond de zon...)
