toep. krachten: comment ontbrekende figuur media9

--- a/6dejaar/dynamica/nwtn_toep_krachten.tex
+++ b/6dejaar/dynamica/nwtn_toep_krachten.tex
@@ -385,7 +385,7 @@ gevaar bestaat dat de beoogde bocht niet gemaakt kan worden! In dit
 geval spreekt men van slippen en ``uit de bocht vliegen''. Zie
 oefeningen voor concrete gevallen.
 
-\includegraphics[width=3.08403in,height=2.31111in,alt={E:\textbackslash School updated tot en met 27\_08\_2012\textbackslash Fysica 6de jaar\textbackslash Afbeeldingen\textbackslash wrijving, grafiek.jpg}]{media/image9.jpeg}
+%%TODO%% \includegraphics[width=3.08403in,height=2.31111in,alt={E:\textbackslash School updated tot en met 27\_08\_2012\textbackslash Fysica 6de jaar\textbackslash Afbeeldingen\textbackslash wrijving, grafiek.jpg}]{media/image9.jpeg}
 
 \begin{itemize}
 \item
