Tijdelijk skip \input{../xmPictures/....tex}

--- a/6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex
+++ b/6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex
@@ -99,12 +99,15 @@
 
 \begin{exercise}
 	De snelheid van een deeltje voldoet aan $v=at$ waarin $a$ constant en negatief is. De plaats van het deeltje wordt voorgesteld door $x$. Aangenomen wordt dat $x=0\rm\,m$ op het ogenblik $t=0\rm\,s$. Welke grafiek geeft het juiste verloop van $x(t)$?
-	\begin{multipleChoice}
-		\choice{\input{../../xmPictures/30p38_a.tex}}
-		\choice{\input{../../xmPictures/30p38_b.tex}}
-		\choice[correct]{\input{../../xmPictures/30p38_c.tex}}
-		\choice{\input{../../xmPictures/30p38_d.tex}}
-	\end{multipleChoice}
+
+	To be fixed
+	\todo{Fix}
+	% \begin{multipleChoice}
+	% 	\choice{\input{../../xmPictures/30p38_a.tex}}
+	% 	\choice{\input{../../xmPictures/30p38_b.tex}}
+	% 	\choice[correct]{\input{../../xmPictures/30p38_c.tex}}
+	% 	\choice{\input{../../xmPictures/30p38_d.tex}}
+	% \end{multipleChoice}
 \end{exercise}
 
 \begin{exercise}
